--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,8 @@
     <color name="swipe_red">#F44336</color>
     <color name="purple_base">#3A0044</color>
     <color name="purple_light">#A252A3</color>
+    <color name="purple_grey_light">#A398BD</color>
     <color name="purple">#6750A4</color>
+    <color name="mtrl_textinput_default_box_stroke_color">@color/white</color>
+    <color name="mtrl_textinput_default_hint_text_color">@color/white</color>
 </resources>
