--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,7 +5,7 @@
         <item name="colorPrimaryVariant">?colorPrimary</item>
         <item name="colorOnPrimary">@color/white</item>
         <item name="android:textColorPrimary">?colorOnPrimary</item>
-        <item name="colorSurface">@color/grey_light</item>
+        <item name="colorSurface">@color/purple_grey_light</item>
         <item name="colorOnSurface">@color/black</item>
         <item name="colorControlNormal">@color/purple</item>
 
