--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,7 +8,7 @@
         <item name="colorSurface">@color/purple_grey_light</item>
         <item name="colorOnSurface">@color/black</item>
         <item name="colorControlNormal">@color/purple</item>
-
+        <item name="android:textColorSecondary">?colorOnPrimary</item>
         <item name="android:windowBackground">?colorPrimary</item>
         <item name="colorOnBackground">?colorOnPrimary</item>
 
